--- a/css/style.css
+++ b/css/style.css
@@ -61,3 +61,93 @@ body{
     background: #ccc;
 }
 <!--##############################  MARX ######################################################-->
+<!--##############################  JTUPC   ######################################################-->
+.hero_img{
+    width: 100%;
+}
+
+.main{
+    background: #fff;
+}
+
+.title{
+    font-size:2.5em;
+    text-align: var(--align-title);
+}
+
+.services_title{
+    text-align: center;
+
+    font-size:3em;
+
+}
+
+.download_container{
+    display: grid;
+    height: 100%;
+    grid-template-columns: 3fr 2fr;
+    place-items: center;
+    gap: 25px;
+}
+
+.download_link{
+   display: inline-block;
+   background: var(--color-btn);
+   color: #fff;
+   padding: var(--padding-btn);
+   text-align: center;
+   text-decoration: none;
+}
+
+.download_img{
+    size: 125%;
+}
+
+.download_title{
+    font-size: 5rem;
+}
+
+
+
+
+.whatis_container{
+    text-align: center;
+    border-bottom: 2px solid #ccc;
+    --padding-container: 30px 0 60px;
+}
+
+.whatis{
+    width: 100%;
+    margin: 0 auto;
+}
+
+.whatis_title{
+    margin: 30px 0;
+}
+
+.whatis_paragraph{
+    font-size: 135%;
+    text-align: center;
+    line-height: 1.5;
+    font-style: italic;
+    color: #615a5a;
+}
+
+.whatis_picture1{
+    width: 320px;
+    height: 320px;
+    border-radius: 50%;
+    object-fit:cover;
+    object-position: left;
+}
+
+.InsideCity{
+    text-align: left;
+    font-size: 120%;
+}
+
+.OutsideCity{
+    text-align: right ;
+    font-size: 120%;
+}
+<!--##############################  JTUPC   ######################################################-->
