--- a/css/style.css
+++ b/css/style.css
@@ -61,3 +61,305 @@ body{
     background: #ccc;
 }
 <!--##############################  MARX ######################################################-->
+
+
+<!--##############################  EDUARDO ######################################################-->
+.hero{
+    height: 100vh;
+    min-width: 500px;
+    position: relative;
+    --padding-container: 0;
+}
+
+.hero::after{
+    content: "";
+    display: block;
+    position: absolute;
+    height: var(--height-shape);
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    background: #fff;
+    z-index: -1;
+    clip-path: polygon(55% 40%, 100% 40%, 100% 100%, 0 100%);
+}
+
+.hero_container{
+    display: grid;
+    height: 100%;
+    grid-template-columns: 3fr 2fr;
+    place-items: center;
+    gap: 25px;
+}
+
+.hero_text_title{
+    font-size: 5rem;
+}
+
+.hero_text_paragraph{
+    font-size: 125%;
+    margin: 30px 0;
+}
+
+.hero_link{
+     display: inline-block;
+     background: var(--color-btn);
+     color: #fff;
+    padding: var(--padding-btn);
+    text-align: center;
+    text-decoration: none;
+}
+<!--##############################  EDUARDO ######################################################-->
+
+<!--##############################  JTUPC   ######################################################-->
+.hero_img{
+    width: 100%;
+}
+
+.main{
+    background: #fff;
+}
+
+.title{
+    font-size:2.5em;
+    text-align: var(--align-title);
+}
+
+.services_title{
+    text-align: center;
+
+    font-size:3em;
+
+}
+
+.download_container{
+    display: grid;
+    height: 100%;
+    grid-template-columns: 3fr 2fr;
+    place-items: center;
+    gap: 25px;
+}
+
+.download_link{
+   display: inline-block;
+   background: var(--color-btn);
+   color: #fff;
+   padding: var(--padding-btn);
+   text-align: center;
+   text-decoration: none;
+}
+
+.download_img{
+    size: 125%;
+}
+
+.download_title{
+    font-size: 5rem;
+}
+
+
+
+
+.whatis_container{
+    text-align: center;
+    border-bottom: 2px solid #ccc;
+    --padding-container: 30px 0 60px;
+}
+
+.whatis{
+    width: 100%;
+    margin: 0 auto;
+}
+
+.whatis_title{
+    margin: 30px 0;
+}
+
+.whatis_paragraph{
+    font-size: 135%;
+    text-align: center;
+    line-height: 1.5;
+    font-style: italic;
+    color: #615a5a;
+}
+
+.whatis_picture1{
+    width: 320px;
+    height: 320px;
+    border-radius: 50%;
+    object-fit:cover;
+    object-position: left;
+}
+
+.InsideCity{
+    text-align: left;
+    font-size: 120%;
+}
+
+.OutsideCity{
+    text-align: right ;
+    font-size: 120%;
+}
+<!--##############################  JTUPC   ######################################################-->
+
+
+<!--##############################  JUBEN ######################################################-->
+.card{
+    background: #f2f2f2;
+}
+
+.services_card{
+    line-height: 1.5;
+    width: var(--width-container);
+    max-width: var(--max-width-container);
+    padding: var(--padding-container); 
+    width: 90%;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.insideCity_picture{
+    float: right;
+}
+
+.outsideCity_picture{
+    float: left;
+}
+
+.whoweare_paragraph{
+    margin-top:50px;
+    margin-bottom: 50px;
+    font-size: 100%;
+}
+
+.whoweare_card{
+    width:100%;
+    margin: o auto;
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns:repeat(3,1fr);
+    grid-template-rows: repeat(4,1fr);
+    gap:20px;
+    grid-template-areas: 
+    "card1  .       card3"
+    "card1  card2   card3"
+    "card4  card2   card5"
+    "card4  .       card5";
+    ;   
+}
+
+.whoweare_member{
+    padding:15px;
+    background: #fff;
+    border-top: 5px solid #47557e ;
+    box-shadow: 0   0   3px     rgba(0, 0, 0, .5);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.whoweare_member_img{
+    margin-top: 30px;
+    width: 170px;
+    height: 170px;
+}
+
+.whoweare_member_name{
+    margin:25px 0;
+    font-size: 1.5rem;
+}
+
+.whoweare_member_name_description{
+    font-weight: 300;
+    margin-bottom: 20px;
+    text-align: justify;
+}
+
+.whoweare_member:nth-last-of-type(1){
+    grid-area: card1;
+}
+
+.whoweare_member:nth-last-of-type(2){
+    grid-area: card2;
+}
+
+.whoweare_member:nth-last-of-type(3){
+    grid-area: card3;
+}
+
+.whoweare_member:nth-last-of-type(4){
+    grid-area: card4;
+}
+
+.whoweare_member:nth-last-of-type(5){
+    grid-area: card5;
+}
+<!--##############################  JUBEN ######################################################-->
+
+
+<!--##############################  OSORIO ######################################################-->
+
+
+.footer{
+    
+    position: relative;
+    --padding-container: 85px 0 50px;
+    background: #fff;
+}
+
+
+.footer__contact{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    place-items: center;
+    margin-bottom: 30px;
+}
+
+.footer__copy{
+    margin: 20px 0;
+    font-weight: 300;
+}
+
+.footer__social{
+    display: flex;
+    padding-top: 30px;
+    flex-wrap: wrap;
+}
+
+.footer__link{
+    width: 60px;
+    height: 60px;
+    border: 1px solid #000;
+    border-radius: 50%;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer__icon{
+    width: 30px;
+}
+
+
+.footer__picture{
+    margin: 0;
+}
+
+.footer__img{
+    width: 100%;
+}
+
+.footer__copyright{
+    padding-top: 30px;
+    border-top: 2px solid #918484;
+    text-align: center;
+}
+
+.footer__copyright::after{
+    content: " hola@alexcgdesign.com";
+}
+
+
+<!--##############################  OSORIO ######################################################-->
